<resources>
    <string name="app_name">Ari</string>
    <string name="name">Ari</string>
    <string name="full_name">Helen Adeyera</string>
    <string name="title">Ari HairnBeauty</string>
    <string name="button">Welcome</string>
    <string name="content_description">image</string>


    <string name="FACEBOOK_APP_ID">1517339895003463</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">1517339895003463|GSfFw9U_AB7uendCH2mNWqep-KU</string>
    <string name="ak_login_protocol_scheme">ak1234</string>
    <string name="login_email_label">Login with Email</string>
    <string name="login_phone_label">Login with Phone Number</string>
    <string name="account">Account</string>
    <string name="id_label">Account ID</string>
    <string name="phone_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="logout_label">Log Out</string>

    <string name="login_label">Login</string>
    <string name="pho">+44 739 9797 192</string>

    <string name="location">Birmingham, United Kingdoms</string>
    <string name="phone">+44 739 9797 192</string>
    <string name="email">adeyerahelen@gmail.com</string>
    <string name="social_fb">arihairnbeauty</string>
    <string name="social_insta">helenadeyera</string>
    <string name="intro">Mobile hairdresser and beautician.</string>
    <string name="social_contact">Contact</string>
    <string name="clients_photo">Look-Book</string>
</resources>
